--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "sequelize-example",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "dependencies": {
-        "babel": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-register": "^6.24.1",
-        "body-parser": "^1.17.2",
-        "express": "^4.15.3",
-        "express-graphql": "^0.6.6",
-        "graphql": "^0.10.5",
-        "mysql2": "^1.3.6",
-        "sequelize": "^4.3.2",
-        "sequelize-cli": "^2.7.0"
-    },
-    "scripts": {
-        "start": "node index.js"
-    }
+  "name": "sequelize-example",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "dependencies": {
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-graphql": "^0.6.6",
+    "graphql": "^0.10.5",
+    "mysql2": "^1.3.6",
+    "nodemon": "^1.14.12",
+    "sequelize": "^4.3.2",
+    "sequelize-cli": "^2.7.0"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
 }
