--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-register": "^6.24.1",
         "body-parser": "^1.17.2",
+        "dataloader": "^1.4.0",
+        "dataloader-sequelize": "^1.7.2",
         "express": "^4.15.3",
         "express-graphql": "^0.6.6",
         "graphql": "^0.10.5",
+        "lodash": "^4.17.10",
         "mysql2": "^1.3.6",
         "sequelize": "^4.3.2",
         "sequelize-cli": "^2.7.0"
