--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "scripts": {
         "start": "tsc && node dist/index.js",
         "run": "tsc -w & nodemon -q -w dist dist/index.js",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts",
+        "test": "jest"
     },
     "devDependencies": {
         "@types/express": "^4.17.3",
+        "@types/jest": "^26.0.3",
         "@types/node": "^13.9.2",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "eslint": "^7.0.0",
+        "jest": "^26.1.0",
         "nodemon": "^2.0.4",
+        "supertest": "^4.0.2",
+        "ts-jest": "^26.1.1",
         "typescript": "^3.8.3"
     }
 }
