--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Test
 
 on: [push, pull_request]
 
@@ -25,5 +25,12 @@ jobs:
       run: yarn install
     - name: Rename config
       run: mv ./src/config.example.ts ./src/config.ts
+    - name: Verify MariaDB connection
+      env:
+        PORT: ${{ job.services.mariadb.ports[3306] }}
+      run: |
+        while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+          sleep 1
+        done
     - name: Run tests
       run: yarn test
