--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
         "express": "^4.16.4",
         "express-graphql": "^0.9.0",
         "graphql": "^14.2.1",
-        "knex": "^0.19.5",
-        "mysql2": "^1.6.5"
+        "knex": "^0.21.1",
+        "mysql2": "^2.1.0"
     },
     "scripts": {
-        "start": "tsc && node dist/index.js",
-        "run": "tsc -w & nodemon -q -w dist dist/index.js",
+        "build": "tsc",
+        "start": "tsc -w & nodemon -q -w dist dist/index.js",
         "lint": "eslint . --ext .ts",
-        "test": "jest"
+        "test": "jest",
+        "migrate": "knex migrate:latest",
+        "seed": "knex seed:run"
     },
     "devDependencies": {
         "@types/express": "^4.17.3",
