--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,5 +34,10 @@ jobs:
       env:
         PORT: ${{ job.services.mariadb.ports[3306] }}
       run: sed "s/3306/$PORT/g" src/config.example.ts > src/config.ts
+    - name: Build projects, run migrations and seeds
+      run: |
+        yarn run build
+        yarn run migrate
+        yarn run seed
     - name: Run tests
       run: yarn test
