--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,6 @@ on:
     types:
       - published
 
-env:
-  PROJECT_NAME: express-graphql-example
-  ORGANIZATION: juffalow
-
 jobs:
   lint:
     name: Lint
@@ -74,46 +70,29 @@ jobs:
       run: |
         yarn test
         CODECOV_TOKEN="$TOKEN" bash <(curl -s https://codecov.io/bash)
-  push_version:
+  build:
+    name: Build container with tag version
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
     needs: test
-    name: Push container
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: docker build -t $ORGANIZATION/$PROJECT_NAME .
-    - name: Install doctl
-      uses: digitalocean/action-doctl@v2
       with:
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    - name: Push image to Digital Ocean Container Registry
-      run: |
-        VERSION=${GITHUB_REF#"refs/tags/"}
-        
-        docker tag $ORGANIZATION/$PROJECT_NAME registry.digitalocean.com/$ORGANIZATION/$PROJECT_NAME:$VERSION
-        
-        doctl auth init
-        doctl registry login
-        
-        docker push registry.digitalocean.com/$ORGANIZATION/$PROJECT_NAME:$VERSION
-  deploy_prod:
-    needs: push_version
-    name: Deploy to prod
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install doctl
-      uses: digitalocean/action-doctl@v2
+        fetch-depth: 1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    - name: Obtain kubernetes config
+        aws-access-key-id: ${{ secrets.AWS_ZDIELAJ_SI_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_ZDIELAJ_SI_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_CONTAINER_REGISTRY_REGION }}
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+    - name: Build, tag and push docker image to Amazon ECR
       env:
-        cluster: ${{ secrets.DIGITALOCEAN_KUBERNETES_PRODUCTION }}
-      run: doctl kubernetes cluster kubeconfig save $cluster
-    - name: Deploy new version
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: express-graphql-example
+        TAG: ${GITHUB_REF#"refs/tags/"}
       run: |
-        VERSION=${GITHUB_REF#"refs/tags/"}
-        
-        kubectl set image deployment/$PROJECT_NAME-deployment $PROJECT_NAME-application=registry.digitalocean.com/$ORGANIZATION/$PROJECT_NAME:$VERSION
+        docker build -t $REGISTRY/$REPOSITORY:$TAG .
+        docker push $REGISTRY/$REPOSITORY:$TAG
