--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dependencies": {
         "dataloader": "^2.0.0",
         "express": "^4.16.4",
-        "express-graphql": "^0.9.0",
         "graphql": "^16.0.1",
+        "graphql-http": "^1.17.1",
         "knex": "^2.1.0",
-        "mysql2": "^2.1.0"
+        "mysql2": "^3.2.0"
     },
     "scripts": {
         "build": "tsc",
-        "start": "tsc-watch --onSuccess 'node ./dist/index.js'",
+        "start": "tsc -w --preserveWatchOutput & nodemon -q -w dist dist/index.js",
         "lint": "eslint . --ext .ts",
         "test": "jest",
         "migrate": "knex migrate:latest",
@@ -26,10 +26,10 @@
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
         "eslint": "^8.6.0",
-        "jest": "^27.2.0",
+        "jest": "^29.5.0",
+        "nodemon": "^2.0.22",
         "supertest": "^4.0.2",
-        "ts-jest": "^27.0.5",
-        "tsc-watch": "^4.6.0",
-        "typescript": "^4.0.2"
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.0.3"
     }
 }
