--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
     name: Push image with latest tag to DockerHub
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-    needs: [lint_test_build]
+    needs: [test]
     steps:
     - uses: actions/checkout@v4
       with:
