Fix missing database name, user and password

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
     - name: Build projects, run migrations and seeds
       env:
         DATABASE_HOST: 127.0.0.1
+        DATABASE_NAME: quotes
+        DATABASE_USER: quotes
+        DATABASE_PASSWORD: p4ssw0rd
         DATABASE_PORT: ${{ job.services.mariadb.ports[3306] }}
       run: |
         yarn run build
