--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "./dist/index.js",
     "license": "MIT",
     "dependencies": {
+        "@godaddy/terminus": "^4.12.1",
         "dataloader": "^2.0.0",
         "express": "^4.16.4",
         "graphql": "^16.0.1",
