--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "license": "MIT",
     "dependencies": {
         "@godaddy/terminus": "^4.12.1",
+        "cls-hooked": "^4.2.2",
         "dataloader": "^2.0.0",
         "express": "^4.16.4",
         "graphql": "^16.0.1",
         "graphql-http": "^1.17.1",
         "knex": "^3.1.0",
-        "mysql2": "^3.2.0"
+        "mysql2": "^3.2.0",
+        "uuid": "^11.0.2",
+        "winston": "^3.16.0"
     },
     "scripts": {
         "build": "tsc",
