--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      env:
+        yarn: 4.5.1
       with:
         node-version: 22
         cache: 'yarn'
@@ -43,6 +45,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      env:
+        yarn: 4.5.1
       with:
         node-version: 22
         cache: 'yarn'
