--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
         "supertest": "^4.0.2",
         "ts-jest": "^29.1.0",
         "typescript": "^5.0.3"
-    }
+    },
+    "packageManager": "yarn@4.5.1"
 }
